--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^0.18.0",
+    "css-what": "^2.0.2",
     "hashids": "^1.0.1",
     "lodash": "^3.6.0",
     "postcss": "^4.1.3"
