--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "html-uglify",
-  "version": "0.1.1",
+  "version": "1.0.0",
   "description": "Uglifies an HTML file and its associated CSS for compression. Great for HTML emails!",
   "main": "lib/main.js",
   "scripts": {
@@ -14,7 +14,7 @@
     "shrink",
     "email"
   ],
-  "author": "Trever Faden (@trever)",
+  "author": "RebelMail",
   "license": "ISC",
   "dependencies": {
     "cheerio": "^0.18.0",
