--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^0.18.0",
-    "css-what": "^2.0.2",
-    "hashids": "^1.0.1",
-    "postcss": "^4.1.3"
+    "css": "^2.2.0",
+    "hashids": "^1.0.1"
   },
   "devDependencies": {
     "chai": "^2.2.0",
