--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^0.18.0",
-    "css": "^2.2.0",
-    "hashids": "^1.0.1"
+    "hashids": "^1.0.1",
+    "postcss": "^4.1.5"
   },
   "devDependencies": {
     "chai": "^2.2.0",
