--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
   "dependencies": {
     "cheerio": "^0.19.0",
     "hashids": "^1.0.2",
-    "postcss": "^4.1.16"
+    "postcss-safe-parser": "^1.0.1"
   },
   "devDependencies": {
-    "chai": "^3.2.0",
-    "mocha": "^2.2.5"
+    "chai": "^3.4.0",
+    "mocha": "^2.3.3"
   },
   "repository": {
     "type": "git",
