--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "cheerio": "^0.19.0",
     "hashids": "^1.0.2",
-    "postcss-safe-parser": "^1.0.1"
+    "postcss-safe-parser": "^1.0.1",
+    "string.prototype.startswith": "^0.2.0"
   },
   "devDependencies": {
     "benchmark": "^1.0.0",
