--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   "dependencies": {
     "cheerio": "^0.19.0",
     "hashids": "^1.0.2",
-    "postcss-safe-parser": "^1.0.1"
+    "postcss-safe-parser": "^1.0.4",
+    "postcss-selector-parser": "^1.3.0"
   },
   "devDependencies": {
-    "benchmark": "^1.0.0",
+    "benchmark": "^2.0.0",
     "chai": "^3.4.1",
     "mocha": "^2.3.4"
   },
