--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "cheerio": "^0.19.0",
     "hashids": "^1.0.2",
     "postcss-safe-parser": "^1.0.4",
-    "postcss-selector-parser": "^1.3.0"
+    "postcss-selector-parser": "^1.3.0",
+    "posthtml": "^0.8.1"
   },
   "devDependencies": {
     "benchmark": "^2.0.0",
