--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "hashids": "^1.0.2",
     "postcss-safe-parser": "^1.0.4",
     "postcss-selector-parser": "^1.3.0",
-    "posthtml": "^0.8.1"
+    "posthtml": "^0.8.1",
+    "posthtml-parser": "^0.1.1",
+    "posthtml-render": "^1.0.5"
   },
   "devDependencies": {
     "benchmark": "^2.0.0",
